# ahrs

./: Cargo.toml  README.md  mag_plot.py
src/: acc.rs  ahrs_fusion.rs  attitude.rs  filter.rs  lib.rs  linear_acc.rs  mag.rs  mag_decl_table.rs  mag_ellipsoid_fitting.rs  params.rs  ppks.rs
